fix: add shared class for grid gap

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -86,6 +86,10 @@ body {
   }
 }
 
+.grid-gap {
+  @apply gap-x-10;
+}
+
 .with-highlighted-text-secondary-2 {
   span {
     @apply text-secondary-2;
